# path_tracer

./: Cargo.toml  README.md  imgui.ini
common_code/: Cargo.toml
common_code/src/: camera.rs  camera_controller.rs  gpu_structs.rs  gui.rs  lib.rs  material.rs  parameters.rs  projection_matrix.rs  setup.rs  sphere.rs
cpu_tracer/: Cargo.toml
cpu_tracer/src/: app.rs  bvh_node.rs  camera.rs  compute_shader.rs  gpu_structs.rs  gui.rs  main.rs  material.rs  parameters.rs  path_tracer.rs  scene.rs  sphere.rs
gpu_tracer/: Cargo.toml  README.md  imgui.ini
gpu_tracer/src/: app.rs  buffers.rs  camera.rs  gpu_structs.rs  gui.rs  lib.rs  main.rs  parameters.rs  scene.rs  sphere.rs
gpu_tracer/src/path_tracer/: mod.rs
gpu_tracer/src/shaders/: compute_megakernel.wgsl  raytracer_kernel.wgsl
